have an issue with ssm-parameter reference in api url setter

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,14 +21,12 @@
     "strictPropertyInitialization": false,
     "typeRoots": [
       "./node_modules/@types"
-    ],
-    "baseUrl": ".",
-    "paths": {
-      "@utils/*": [
-        "./utils/*"
-      ]
-    }
+    ]
   },
+  "include": [
+    "**/*.ts",
+    "test/**/*.ts"
+  ],
   "exclude": [
     "node_modules",
     "cdk.out"
